fix sonar code smell